fix insert and update release and fix swagger
